<resources>
    <string name="app_name">Apper</string>
    <string name="toolbar_title">Apper</string>
    <string name="action_search_app">Search app</string>
    <string name="action_create_section">New group</string>
    <string name="action_settings">Settings</string>
    <string name="action_donut">Donate</string>
    <string name="section_name">Group name</string>
    <string name="startable_name">App name</string>
    <string name="dialog_error_section_exists">This group already exists</string>
    <string name="dialog_error_app_name_exists">This name is already used by another app</string>
    <string name="default_page_name">Apps</string>
    <string name="uncategorized_group">Uncategorized</string>
    <string name="remove_section_title">Remove group</string>
    <string name="remove_section_message">Do you want to remove the \"%1$s\" group?\nThe contained apps will be moved to the \"%2$s\" group</string>
    <string name="move_app_title">Pick a group</string>
    <string name="move_app_to_new_section">New group…</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="got_it">GOT IT</string>
    <string name="action_button_done">Done</string>
    <string name="action_button_move_to_section">Move to group</string>
    <string name="action_button_clear_selection">Clear selection</string>
    <string name="app_item_menu_clear_badge">Clear message indicator</string>
    <string name="app_item_menu_change_icon">Change icon</string>
    <string name="app_item_menu_move_to_section">Move to group</string>
    <string name="app_item_menu_rename">Rename</string>
    <string name="app_item_menu_information">Information</string>
    <string name="app_item_menu_uninstall">Uninstall</string>
    <string name="app_item_menu_remove_shortcut">Delete shortcut</string>
    <string name="app_item_menu_notification_without_title">Notification</string>
    <string name="app_item_menu_reorder_items">Reorder items</string>
    <string name="cannot_start_app">App cannot be started.</string>
    <string name="cannot_show_app_info">Cannot show app info.</string>
    <string name="cannot_start_shortcut">App cannot be found. Cannot start shortcut.</string>
    <string name="cannot_start_disabled_shortcut">Shortcut is disabled.</string>
    <string name="cannot_pin_disabled_shortcut">Cannot pin. Shortcut is disabled.</string>
    <string name="cannot_pin_pinned_shortcut">Shortcut is already pinned.</string>
    <string name="cannot_pin">Cannot pin shortcut.</string>
    <string name="cannot_drag_multiple_apps">Only single items can be dragged</string>
    <string name="section_item_menu_rename">Rename</string>
    <string name="section_item_menu_delete">Delete</string>
    <string name="section_item_menu_sort_apps">Sort apps alphabetically</string>
    <string name="section_item_menu_reorder_sections">Reorder groups</string>
    <string name="widget_menu_move_resize">Move and resize</string>
    <string name="widget_menu_move_to_page">Move to other page</string>
    <string name="widget_menu_bring_to_top">Bring to top</string>
    <string name="widget_menu_remove">Remove</string>
    <string-array name="widget_menu">
        <item>@string/widget_menu_move_resize</item>
        <item>@string/widget_menu_move_to_page</item>
        <item>@string/widget_menu_bring_to_top</item>
        <item>@string/widget_menu_remove</item>
    </string-array>
    <string name="whats_new_title" translatable="false">Version %1$s</string>
    <string name="help_title" translatable="false">Help</string>
    <string name="tip_title" translatable="false">Help</string>
    <string name="whats_new" translatable="false">Groups and apps can be <b>reordered</b>.\n\n<b>Multiple</b> apps can be moved to a group at once.\n\n<b>Pin app shortcuts</b> from app contect menu.</string>
    <string name="whats_new_69" translatable="false"><b>Experimental</b> icon pack support.\nLong tap on an app and select the <b>Change icon</b> option.</string>
    <string name="rearrange_items_help">Long press and select <b>\"Reorder\"</b> to rearrange groups and apps.</string>
    <string name="reorder_apps_help" translatable="false">Long press and Drag <b>individual</b> apps.\n\nSelect and tap the folder icon to move <b>multiple</b> apps to new group.</string>
    <string name="use_launcher_tip">Did you know that you can use Apper as your <b>launcher</b>?\n\nGo to your phone Settings and set Apper as your <b>Home screen launcher</b>.</string>
    <string name="icon_pack_help" translatable="false"><b>Select</b> an icon from one of the icon packs and tap the orange apply button.\n\n<b>Search</b> for icons using the search bar above.\n\nFor <b>more options</b> check out the menu in the corner above.</string>
    <string name="change_wallpaper_dialog_title">Select wallpaper source</string>
    <string name="widget_page_add_widget_error">We don\'t have permission to use this widget</string>
    <string name="widget_page_add_widget">Add widget</string>
    <string name="widget_page_edit_pages">Edit pages</string>
    <string name="widget_page_change_wallpaper">Change wallpaper</string>
    <string-array name="widget_page_menu">
        <item>@string/widget_page_add_widget</item>
        <item>@string/widget_page_edit_pages</item>
        <item>@string/widget_page_change_wallpaper</item>
    </string-array>
    <string name="widget_picker_title">Pick a widget</string>
    <string name="launcher_page_editor_new_page">New Page</string>
    <string name="launcher_page_editor_done">Done</string>
    <string name="launcher_page_editor_cancel">Cancel</string>
    <string name="launcher_page_editor_remove_dialog_title">Delete page</string>
    <string name="launcher_page_editor_remove_dialog_message">Are you sure you want to delete this page?</string>
    <string name="launcher_page_editor_permission_title">Permission needed</string>
    <string name="launcher_page_editor_permission_message">Storage permission is necessary to show the current wallpaper</string>
    <string name="page_picker_pin_widget_title">Adding widget</string>
    <string name="page_picker_move_widget_title">Moving widget</string>
    <string name="page_picker_message">Choose a page</string>
    <string name="page_picker_cannot_add_to_page">Cannot add Widgets to this page</string>
    <string name="page_picker_already_on_page">Widget is already on this page</string>
    <string name="page_picker_moved_widget">Widget moved</string>
    <string name="iconpack_picker_empty">Go to the <a href="https://play.google.com/store/search?q=iconpack&amp;c=apps">Play Store</a> to install icon packs</string>
    <string name="iconpack_picker_icon_packs">Icon packs</string>
    <string name="iconpack_picker_icon_effects">Icon effects</string>
    <string name="iconpack_picker_change_icon">Change app icon</string>
    <string name="iconpack_picker_reset_icon">Reset to original</string>
    <string name="iconpack_picker_reset_all_icons">Reset all to original</string>
    <string name="iconpack_picker_apply_iconpack">Apply icon pack</string>
    <string name="iconpack_picker_apply_icon">Use selected</string>
    <string name="iconpack_picker_search_icon">Search app</string>
    <string name="iconpack_picker_reset_warning">Are you sure you want to reset <b>this app icon</b> to its default?</string>
    <string name="iconpack_picker_reset_all_warning">Are you sure you want to reset <b>all app icons</b> to their default ones?</string>
    <string name="iconpack_picker_apply_all_warning">This will change <b>all app icons</b> (it may take a few seconds).\n\nAll your previous customizations will be lost.\n\nSome apps may not have a matching icon.</string>
    <string name="iconpack_picker_install_more">More icon packs</string>
    <string name="iconpack_picker_apply_progress">Applying icon pack…</string>
    <string name="iconpack_picker_reset_progress">Resetting default icons…</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_keep_apps_sorted_alphabetically">Keep apps sorted</string>
    <string name="settings_keep_apps_sorted_alphabetically_summary">Always sort apps alphabetically inside groups</string>
    <string name="settings_keep_apps_sorted_dialog_message">All your apps will be re-arranged alphabetically now.</string>
    <string name="settings_color_theme">Color theme</string>
    <string name="settings_column_width">Icon size</string>
    <string name="settings_badges">Message indicators</string>
    <string name="settings_show_new_content_badge">New content</string>
    <string name="settings_show_new_content_badge_summary">Show indicator of new content for supported applications (e.g. Facebook)</string>
    <string name="settings_show_sms_badge">Unread text messages</string>
    <string name="settings_show_sms_badge_summary">Show indicator for unread messages on the default SMS app</string>
    <string name="settings_show_phone_badge">Missed phone calls</string>
    <string name="settings_show_phone_badge_summary">Show indicator for missed calls on the default phone app</string>
    <string name="settings_show_phone_badge_select_default_app">Select your default phone app</string>
    <string name="settings_show_notification_badge">Notifications</string>
    <string name="settings_show_notification_badge_summary">Show indicator if an app has notifications. Requires Notification access</string>
    <string name="settings_show_notification_badge_dialog_title">Notification access needed</string>
    <string name="settings_show_notification_badge_dialog_message">Make sure Notification access is enabled for Apper in the System Settings.</string>
    <string name="settings_open_system_settings">Open settings</string>
    <string name="settings_restarting_app">Applying settings and restarting app…</string>
    <string name="donut_page_title">Apper is free</string>
    <string name="donut_page_message">It has no ads and no locked-down features.\n\nYou may support its development if you wish.</string>
    <string name="donut_page_donut">Support with &#9733; %1$s</string>
    <string name="donut_page_purchase_thanks">Thank you for supporting with %1$s</string>
    <string name="color_theme_transparent_light">Transparent Light</string>
    <string name="color_theme_transparent_dark">Transparent Dark</string>
    <string name="color_theme_black">Black</string>
    <string name="color_theme_brown">Brown</string>
    <string name="color_theme_red">Red</string>
    <string name="color_theme_green">Green</string>
    <string name="color_theme_blue_grey">Blue Grey</string>
    <string name="color_theme_deep_purple">Deep Purple</string>
    <string name="color_theme_indigo">Indigo</string>
    <string-array name="color_themes">
        <item>@string/color_theme_transparent_light</item>
        <item>@string/color_theme_transparent_dark</item>
        <item>@string/color_theme_black</item>
        <item>@string/color_theme_brown</item>
        <item>@string/color_theme_red</item>
        <item>@string/color_theme_green</item>
        <item>@string/color_theme_blue_grey</item>
        <item>@string/color_theme_deep_purple</item>
        <item>@string/color_theme_indigo</item>
    </string-array>
    <string name="color_theme_value_transparent_light" translatable="false">transparent_light</string>
    <string name="color_theme_value_transparent_dark" translatable="false">transparent_dark</string>
    <string name="color_theme_value_black" translatable="false">black</string>
    <string name="color_theme_value_brown" translatable="false">brown</string>
    <string name="color_theme_value_red" translatable="false">red</string>
    <string name="color_theme_value_green" translatable="false">green</string>
    <string name="color_theme_value_default" translatable="false">@string/color_theme_value_transparent_light</string>
</resources>