<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_appearance"
        android:key="pref_key_appearance">
        <SwitchPreference
            android:key="pref_key_keep_apps_sorted_alphabetically"
            android:title="@string/settings_keep_apps_sorted_alphabetically"
            android:summary="@string/settings_keep_apps_sorted_alphabetically_summary"
            android:defaultValue="false"/>
        <ListPreference
            android:key="pref_key_color_theme"
            android:title="@string/settings_color_theme"
            android:summary="@string/color_theme_default"
            android:dialogTitle="@string/settings_color_theme"
            android:entries="@array/color_themes"
            android:entryValues="@array/color_theme_values"
            android:defaultValue="@string/color_theme_value_default" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_badges"
        android:key="pref_key_options">
        <SwitchPreference
            android:key="pref_key_show_phone_badge"
            android:title="@string/settings_show_phone_badge"
            android:summary="@string/settings_show_phone_badge_summary"
            android:defaultValue="false"/>
        <SwitchPreference
            android:key="pref_key_show_sms_badge"
            android:title="@string/settings_show_sms_badge"
            android:summary="@string/settings_show_sms_badge_summary"
            android:defaultValue="false"/>
        <SwitchPreference
            android:key="pref_key_show_badge"
            android:title="@string/settings_show_badge"
            android:summary="@string/settings_show_badge_summary"
            android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>
