<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search_icon"
        android:title="@string/iconpack_picker_search_icon"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_reset_icon"
        android:title="@string/iconpack_picker_reset_icon"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_reset_all_icons"
        android:title="@string/iconpack_picker_reset_all_icons"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_apply_iconpack"
        android:title="@string/iconpack_picker_apply_iconpack"
        app:showAsAction="never"/>

</menu>
