<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/donutTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:text="@string/donut_page_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?attr/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/donutMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:text="@string/donut_page_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/donutTitle" />

    <Button
        android:id="@+id/giveOneDonut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@android:color/transparent"
        android:text="@string/donut_page_donut"
        android:textColor="@android:color/holo_green_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/donutMessage"
        tools:text="Support with &#9733; 1 Eur" />

    <Button
        android:id="@+id/giveTwoDonuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:text="@string/donut_page_donut"
        android:textColor="@android:color/holo_green_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/giveOneDonut"
        tools:text="Support with &#9733; 2 Eur" />

    <Button
        android:id="@+id/giveThreeDonuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:text="@string/donut_page_donut"
        android:textColor="@android:color/holo_green_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/giveTwoDonuts"
        tools:text="Support with &#9733; 3 Eur" />

    <Button
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_close"
        android:text="@string/donut_page_close"
        android:textColor="?attr/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:id="@+id/recyclerView"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_marginTop="30dp"-->
    <!--        android:layout_marginBottom="15dp"-->
    <!--        android:clipChildren="false"-->
    <!--        android:clipToPadding="false"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/closeButton"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/donutMessage" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
